--- a/src/locales/en.yml
+++ b/src/locales/en.yml
@@ -11,6 +11,7 @@ alert_access_denied: You do not have permission to access this page.
 alert_account_created: The account has been successfully created.
 alert_account_deleted: The account has been deleted.
 alert_account_disabled: Your account is disabled.
+alert_all_sessions_deleted: All sessions have been deleted.
 alert_authentication_method_deleted: "{name} has been successfully removed from this account."
 alert_disabled_account: This account is disabled.
 alert_email_unavailable: The email address unavailable.
@@ -28,10 +29,12 @@ alert_only_authentication_method: "Cannot remove {name} because it is the only a
 alert_password_updated: The password has been successfully updated.
 alert_personal_informations_updated: Personal information has been saved.
 alert_same_email: The e-mail address is the same.
+alert_session_deleted: The session has been deleted.
 alert_unknown_email: The email address does not exist.
 
 # Dialogs
 dialog_account_deletion: The account deletion is final.<br>Continue ?
+dialog_delete_current_session: If you close the current session, you will be disconnected.
 dialog_passwords_not_match: The passwords do not match.
 
 # Global
@@ -48,19 +51,26 @@ close: close
 continue_with: continue with
 country: country
 current_password: current password
+current_session: current session
 dashboard: dashboard
 delete_account: delete account
+delete_all_sessions: disconnect all sessions
 edit: edit
 email: email
 enabled: enabled
+expiration: expiration
+expired_session: expired session
 female: female
 first_name: first name
 gender: gender
 home: home
 i_accept_the: i accept the
 identifier: identifier
+in_use_session: in use session
+last_access: last access
 last_name: last name
 link: link
+location: location
 male: male
 new_password: new password
 new_password_confirmation: new password confirmation
@@ -73,6 +83,7 @@ privacy_policy: privacy policy
 save: save
 select_file: select file
 send: send
+sessions: sessions
 settings: settings
 sign_in: sign in
 sign_out: sign out
@@ -82,6 +93,7 @@ to_sign_in: sign in
 to_sign_up: sign up
 type: type
 unlink: unlink
+unused_session: unused session
 update_email: update email
 update_password: update password
 user: user
